--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@
   --vh: 100vh;
   --vh: 100svh;
 }
+
+html {
+  overflow-x: hidden;
+}
 h1,
 h2,
 h3,
@@ -63,7 +67,9 @@ body {
   --cWidth: calc(100% - 30px);
   --cMaxWidth: 1920px;
   max-width: 100vw;
+  overflow: hidden;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 .main-body {
   max-width: 100vw;
